fix accessiability color contrast issues

--- a/sass/components/_billboard.scss
+++ b/sass/components/_billboard.scss
@@ -95,7 +95,7 @@
       a:not(.billboard__button) {
         font-size: 12px;
         font-weight: 900;
-        color: #999;
+        color: black;
         text-transform: uppercase;
         text-decoration: none;
         transition: border-bottom .2s;
